Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59281

Set CB_DEVELOPMENT_ASSERTS to Off

    XMLWordPrintable

Details

    • March-June 24

    Description

      We set the CB_DEVELOPMENT_ASSERTS flag ON to fire development only assertions. In particular this ensure things such as the vBucket document counter and vBucket dirtyQueueSize do not end up in incorrect states.

      When we branch master (Trinity) to its own branch we need to set the CB_DEVELOPMENT_ASSERTS flag in tlm/CmakeLists.txt to Off. This ensures that any development assertions will not fire in release/release candidate builds. We want this flag to be set to On until this point though, as the assertions can help identify issues that we may not otherwise see.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jwalker Jim Walker
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty