MB-59281: Only define format_as when CB_DEV_ASSERT=ON

Defining CB_DEVELOPMENT_ASSERTS cause the underflow policy to be
set to a value which caused one of the format_as template functions
to be defined already

Change-Id: I370e72087583ed2a998cdd62bcffe4e5de29a734
Reviewed-on: https://review.couchbase.org/c/platform/+/205094
Well-Formed: Restriction Checker
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>