include/platform/non_negative_counter.h
@@ -393,9 +393,12 @@ template <typename T>
 T format_as(const NonNegativeCounter<T>& nnc) {
     return nnc.load();
 }
+
+#if CB_DEVELOPMENT_ASSERTS
 template <typename T>
 T format_as(const NonNegativeCounter<T, ClampAtZeroUnderflowPolicy>& nnc) {
     return nnc.load();
 }
+#endif
 
 } // namespace cb
